[INJIVER-1370] - clear sessionStorage on path change and handle datashareVc
Signed-off-by: sarupmoni <93664377+sarupmoni@users.noreply.github.com>