@@ -1,6 +1,6 @@
 package io.inji.verify.services.impl;
 
-import com.nimbusds.jose.JOSEException;
+import io.inji.verify.dto.result.VCResultDto;
 import io.inji.verify.dto.submission.*;
 import io.inji.verify.enums.VPResultStatus;
 import io.inji.verify.exception.VPSubmissionNotFoundException;
@@ -8,16 +8,18 @@ import io.inji.verify.exception.VPSubmissionWalletError;
 import io.inji.verify.models.AuthorizationRequestCreateResponse;
 import io.inji.verify.models.VPSubmission;
 import io.inji.verify.repository.VPSubmissionRepository;
+import io.mosip.vercred.vcverifier.CredentialsVerifier;
 import io.mosip.vercred.vcverifier.PresentationVerifier;
 import io.mosip.vercred.vcverifier.data.PresentationVerificationResult;
 import io.mosip.vercred.vcverifier.data.VCResult;
 import io.mosip.vercred.vcverifier.data.VPVerificationStatus;
+import io.mosip.vercred.vcverifier.data.VerificationResult;
 import io.mosip.vercred.vcverifier.data.VerificationStatus;
+import org.json.JSONArray;
+import org.json.JSONObject;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.*;
-
-import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
@@ -37,12 +39,17 @@ public class VerifiablePresentationSubmissionServiceImplTest {
     @Mock
     private VerifiablePresentationRequestServiceImpl verifiablePresentationRequestService;
 
+    @Mock
+    private CredentialsVerifier credentialsVerifier;
+
     @InjectMocks
     private VerifiablePresentationSubmissionServiceImpl verifiablePresentationSubmissionService;
 
     @BeforeEach
     public void setUp() {
         MockitoAnnotations.openMocks(this);
+        verifiablePresentationSubmissionService = new VerifiablePresentationSubmissionServiceImpl(
+            vpSubmissionRepository, credentialsVerifier, presentationVerifier, verifiablePresentationRequestService);
     }
 
     @Test
@@ -59,19 +66,23 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_Success_JSONObject() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
-        List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.SUCCESS));
+        List<String> requestIds = List.of("req123");
+        List<VCResult> vcResults = List.of(new VCResult("Verified successfully", VerificationStatus.SUCCESS)); // ✅ fix
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[\"{\\\"verifiableCredential\\\":{\\\"credential\\\":{}}}\"]}", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))),null,null);
-        
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
-        when(presentationVerifier.verify(anyString())).thenReturn(
-            new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
+        VPSubmission vpSubmission = new VPSubmission(
+                "state123",
+                "{\"type\":[\"VerifiablePresentation\"],\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[{\"type\":[\"VerifiablePresentation\"]}]}",
+                new PresentationSubmissionDto("id", "dId", List.of(
+                        new DescriptorMapDto("id", "format", "path", new PathNestedDto("format", "path"))
+                )),
+                null,
+                null
+        );
+
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
+        when(presentationVerifier.verify(anyString()))
+                .thenReturn(new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
         VPTokenResultDto resultDto = verifiablePresentationSubmissionService.getVPResult(requestIds, transactionId);
@@ -83,19 +94,19 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_Success_Base64EncodedString() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
         
-        String vpTokenJson = "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}";
+        String vpTokenJson = "{\"type\":[\"VerifiablePresentation\"],\"proof\":{\"type\":\"Ed25519Signature2018\"},\"VerifiablePresentation\":[{\"type\":[\"VerifiablePresentation\"]}]}";
         String base64Token = Base64.getUrlEncoder().encodeToString(vpTokenJson.getBytes());
         
-        List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.SUCCESS));
-        VPSubmission vpSubmission = new VPSubmission("state123", "\"" + base64Token + "\"", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
-        
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        List<VCResult> vcResults = List.of(new VCResult("", VerificationStatus.SUCCESS));
+        VPSubmission vpSubmission = new VPSubmission("state123", "\"" + base64Token + "\"",
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
+
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
@@ -109,20 +120,27 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_Success_JSONArray() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
-        
-        List<VCResult> vcResults1 = Arrays.asList(new VCResult("vc1", VerificationStatus.SUCCESS));
-        List<VCResult> vcResults2 = Arrays.asList(new VCResult("vc2", VerificationStatus.SUCCESS));
-        
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "[{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}, " +
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}]", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
-        
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+
+        List<VCResult> vcResults1 = List.of(new VCResult("vc1", VerificationStatus.SUCCESS));
+        List<VCResult> vcResults2 = List.of(new VCResult("vc2", VerificationStatus.SUCCESS));
+
+        VPSubmission vpSubmission = new VPSubmission(
+                "state123",
+                "[" +
+                        "{\"type\":[\"VerifiablePresentation\"],\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}," +
+                        "{\"type\":[\"VerifiablePresentation\"],\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}" +
+                        "]",
+                new PresentationSubmissionDto(
+                        "id", "dId",
+                        List.of(new DescriptorMapDto("id", "format", "path", new PathNestedDto("format", "path")))
+                ),
+                null,
+                null
+        );
+
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(presentationVerifier.verify(anyString()))
             .thenReturn(new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults1))
             .thenReturn(new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults2));
@@ -138,21 +156,21 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_Success_JSONArrayWithBase64() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
-        
-        String vpToken1Json = "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}";
+
+        String vpToken1Json = "{\"type\":[\"VerifiablePresentation\"],\"proof\":{\"type\":\"Ed25519Signature2018\"},\"VerifiablePresentation\":[{\"type\":[\"VerifiablePresentation\"]}]}";
         String base64Token1 = Base64.getUrlEncoder().encodeToString(vpToken1Json.getBytes());
         
-        List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.SUCCESS));
+        List<VCResult> vcResults = List.of(new VCResult("", VerificationStatus.SUCCESS));
         
         VPSubmission vpSubmission = new VPSubmission("state123", 
-            "[\"" + base64Token1 + "\", {\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}]", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            "[\"" + base64Token1 + "\", \"{\\\"type\\\":[\\\"VerifiablePresentation\\\"],\\\"proof\\\":{\\\"type\\\":\\\"Ed25519Signature2018\\\"},\\\"VerifiablePresentation\\\":[{\\\"type\\\":[\\\"VerifiablePresentation\\\"]}]}\"]",
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(presentationVerifier.verify(anyString()))
             .thenReturn(new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
@@ -166,7 +184,7 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_VPSubmissionNotFound() {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(new ArrayList<>());
@@ -177,16 +195,16 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_VerificationFailed_InvalidVPStatus() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         VPSubmission vpSubmission = new VPSubmission("state123", 
             "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.INVALID, new ArrayList<>()));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
@@ -200,17 +218,17 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_VerificationFailed_InvalidVCStatus() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
-        List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.INVALID));
+        List<VCResult> vcResults = List.of(new VCResult("", VerificationStatus.INVALID));
         VPSubmission vpSubmission = new VPSubmission("state123", 
             "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
@@ -224,17 +242,17 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_VerificationFailed_ExpiredVCStatus() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
-        List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.EXPIRED));
+        List<VCResult> vcResults = List.of(new VCResult("", VerificationStatus.EXPIRED));
         VPSubmission vpSubmission = new VPSubmission("state123", 
             "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
@@ -248,15 +266,15 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_TokenMatchingFailed_NullVpToken() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         VPSubmission vpSubmission = new VPSubmission("state123", "null", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
 
@@ -268,16 +286,16 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_TokenMatchingFailed_NullRequest() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         VPSubmission vpSubmission = new VPSubmission("state123", 
             "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId)).thenReturn(null);
 
         VPTokenResultDto resultDto = verifiablePresentationSubmissionService.getVPResult(requestIds, transactionId);
@@ -288,14 +306,14 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_TokenMatchingFailed_EmptyDescriptorMap() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         VPSubmission vpSubmission = new VPSubmission("state123", 
             "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
             new PresentationSubmissionDto("id", "dId", new ArrayList<>()), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
 
@@ -307,14 +325,14 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_TokenMatchingFailed_NullDescriptorMap() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         VPSubmission vpSubmission = new VPSubmission("state123", 
             "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
             new PresentationSubmissionDto("id", "dId", null), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
 
@@ -326,16 +344,16 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_ExceptionHandling_RuntimeException() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         VPSubmission vpSubmission = new VPSubmission("state123", 
             "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
         when(presentationVerifier.verify(anyString())).thenThrow(new RuntimeException("Verification error"));
@@ -348,15 +366,15 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_InvalidVPTokenFormat() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         VPSubmission vpSubmission = new VPSubmission("state123", "12345", // Invalid format (number)
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
 
@@ -368,15 +386,15 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_InvalidItemInVPTokenArray() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         VPSubmission vpSubmission = new VPSubmission("state123", "[123, \"invalid\"]", // Invalid array items
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
 
@@ -388,15 +406,15 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_InvalidBase64InArray() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         VPSubmission vpSubmission = new VPSubmission("state123", "[\"invalid-base64!!!\"]", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
 
@@ -408,15 +426,15 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_InvalidBase64String() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         VPSubmission vpSubmission = new VPSubmission("state123", "\"invalid-base64!!!\"", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
 
@@ -428,18 +446,18 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_EmptyVpVerificationStatuses() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+        VPSubmission vpSubmission = new VPSubmission("state123",
+                "{\"type\":[\"VerifiablePresentation\"],\"proof\":{\"type\":\"Ed25519Signature2018\"},\"VerifiablePresentation\":[{\"type\":[\"VerifiablePresentation\"]}]}",
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
-            new PresentationVerificationResult(VPVerificationStatus.VALID, Arrays.asList(new VCResult("", VerificationStatus.SUCCESS))));
+            new PresentationVerificationResult(VPVerificationStatus.VALID, List.of(new VCResult("", VerificationStatus.SUCCESS))));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
 
@@ -451,17 +469,17 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testIsVPTokenMatching_AllValidConditions() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
-        List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.SUCCESS));
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+        List<VCResult> vcResults = List.of(new VCResult("", VerificationStatus.SUCCESS));
+        VPSubmission vpSubmission = new VPSubmission("state123",
+                "{\"type\":[\"VerifiablePresentation\"],\"proof\":{\"type\":\"Ed25519Signature2018\"},\"VerifiablePresentation\":[{\"type\":[\"VerifiablePresentation\"]}]}",
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
@@ -476,20 +494,20 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_VerificationFailedException() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         VPSubmission vpSubmission = new VPSubmission("state123", 
             "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
         
-        List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.INVALID));
+        List<VCResult> vcResults = List.of(new VCResult("", VerificationStatus.INVALID));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
 
@@ -501,16 +519,16 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test 
     public void testGetVPResult_TokenMatchingFailedException() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         VPSubmission vpSubmission = new VPSubmission("state123", 
             "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId)).thenReturn(null);
 
         VPTokenResultDto resultDto = verifiablePresentationSubmissionService.getVPResult(requestIds, transactionId);
@@ -521,7 +539,7 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_MixedVerificationStatuses() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
         List<VCResult> vcResults = Arrays.asList(
@@ -533,11 +551,11 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         VPSubmission vpSubmission = new VPSubmission("state123", 
             "[{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}, " +
             "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}]", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(presentationVerifier.verify(anyString()))
             .thenReturn(new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults))
             .thenReturn(new PresentationVerificationResult(VPVerificationStatus.INVALID, new ArrayList<>()));
@@ -552,22 +570,22 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_AllVerificationStatusTypes() throws VPSubmissionNotFoundException, VPSubmissionWalletError {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = List.of("req123");
         String transactionId = "tx123";
 
-        List<VCResult> successResults = Arrays.asList(new VCResult("vc_success", VerificationStatus.SUCCESS));
-        List<VCResult> expiredResults = Arrays.asList(new VCResult("vc_expired", VerificationStatus.EXPIRED));
-        List<VCResult> invalidResults = Arrays.asList(new VCResult("vc_invalid", VerificationStatus.INVALID));
+        List<VCResult> successResults = List.of(new VCResult("vc_success", VerificationStatus.SUCCESS));
+        List<VCResult> expiredResults = List.of(new VCResult("vc_expired", VerificationStatus.EXPIRED));
+        List<VCResult> invalidResults = List.of(new VCResult("vc_invalid", VerificationStatus.INVALID));
         
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "[{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}, " +
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}, " +
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}]", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto(
-                        "format","path")))), null, null);
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "[{\"type\":[\"VerifiablePresentation\"],\"proof\":{\"type\":\"Ed25519Signature2018\"},\"VerifiablePresentation\":[{\"type\":[\"VerifiablePresentation\"]}]}, " +
+            "{\"type\":[\"VerifiablePresentation\"],\"proof\":{\"type\":\"Ed25519Signature2018\"},\"VerifiablePresentation\":[{\"type\":[\"VerifiablePresentation\"]}]}, " +
+            "{\"type\":[\"VerifiablePresentation\"],\"proof\":{\"type\":\"Ed25519Signature2018\"},\"VerifiablePresentation\":[{\"type\":[\"VerifiablePresentation\"]}]}]",
+            new PresentationSubmissionDto("id", "dId", List.of(
+                    new DescriptorMapDto("id", "format", "path", new PathNestedDto(
+                            "format", "path")))), null, null);
         
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(presentationVerifier.verify(anyString()))
             .thenReturn(new PresentationVerificationResult(VPVerificationStatus.VALID, successResults))
             .thenReturn(new PresentationVerificationResult(VPVerificationStatus.VALID, expiredResults))
@@ -587,5 +605,86 @@ public class VerifiablePresentationSubmissionServiceImplTest {
             .anyMatch(vc -> vc.getVerificationStatus() == VerificationStatus.EXPIRED));
         assertTrue(resultDto.getVcResults().stream()
             .anyMatch(vc -> vc.getVerificationStatus() == VerificationStatus.INVALID));
+    }
+
+    @Test
+    public void testProcessJsonVpTokens_SimpleVC() {
+        List<JSONObject> jsonVpTokens = new ArrayList<>();
+        List<VCResultDto> verificationResults = new ArrayList<>();
+        List<VPVerificationStatus> vpVerificationStatuses = new ArrayList<>();
+        JSONArray types = new JSONArray();
+        types.put("VerifiableCredential");
+        JSONObject vc = new JSONObject();
+        vc.put("type", types);
+        jsonVpTokens.add(vc);
+        VerificationResult mockResult = mock(VerificationResult.class);
+
+        when(mockResult.getVerificationStatus()).thenReturn(true);
+        when(credentialsVerifier.verify(anyString(), eq(io.mosip.vercred.vcverifier.constants.CredentialFormat.LDP_VC)))
+            .thenReturn(mockResult);
+        PresentationVerificationResult presResult = new PresentationVerificationResult(VPVerificationStatus.VALID, new ArrayList<>());
+        when(presentationVerifier.verify(anyString())).thenReturn(presResult);
+        verifiablePresentationSubmissionService.processJsonVpTokens(jsonVpTokens, verificationResults, vpVerificationStatuses);
+
+        assertFalse(verificationResults.isEmpty());
+        assertTrue(vpVerificationStatuses.isEmpty());
+    }
+
+    @Test
+    public void testProcessSdJwtVpTokens_Success() {
+        List<String> sdJwtVpTokens = List.of("sdjwt-token");
+        List<VCResultDto> verificationResults = new ArrayList<>();
+        VerificationResult mockResult = mock(VerificationResult.class);
+
+        when(mockResult.getVerificationStatus()).thenReturn(true);
+        when(credentialsVerifier.verify(anyString(), eq(io.mosip.vercred.vcverifier.constants.CredentialFormat.VC_SD_JWT)))
+            .thenReturn(mockResult);
+        verifiablePresentationSubmissionService.processSdJwtVpTokens(sdJwtVpTokens, verificationResults);
+
+        assertFalse(verificationResults.isEmpty());
+    }
+
+    @Test
+    public void testProcessJsonVpTokens_VPWithVCs() {
+        List<JSONObject> jsonVpTokens = new ArrayList<>();
+        List<VCResultDto> verificationResults = new ArrayList<>();
+        List<VPVerificationStatus> vpVerificationStatuses = new ArrayList<>();
+        JSONArray types = new JSONArray();
+        types.put("VerifiablePresentation");
+        JSONObject vp = new JSONObject();
+        vp.put("type", types);
+        jsonVpTokens.add(vp);
+        PresentationVerificationResult presResult = new PresentationVerificationResult(VPVerificationStatus.VALID, List.of(new VCResult("vc", VerificationStatus.SUCCESS)));
+
+        when(presentationVerifier.verify(anyString())).thenReturn(presResult);
+        verifiablePresentationSubmissionService.processJsonVpTokens(jsonVpTokens, verificationResults, vpVerificationStatuses);
+
+        assertFalse(verificationResults.isEmpty());
+        assertFalse(vpVerificationStatuses.isEmpty());
+    }
+
+    @Test
+    public void testExtractTokens_MixedArray() {
+        String vcJson = "{\"type\":[\"VerifiableCredential\"]}";
+        String base64Token = Base64.getUrlEncoder().encodeToString(vcJson.getBytes());
+        String sdJwtToken = "sdjwt-token-value";
+        String arrayToken = "[\"" + base64Token + "\",\"" + sdJwtToken + "\"]";
+        List<JSONObject> jsonVpTokens = new ArrayList<>();
+        List<String> sdJwtVpTokens = new ArrayList<>();
+        verifiablePresentationSubmissionService.extractTokens(arrayToken, jsonVpTokens, sdJwtVpTokens);
+
+        assertEquals(1, jsonVpTokens.size());
+        assertEquals(0, sdJwtVpTokens.size());
+    }
+
+    @Test
+    public void testExtractTokens_InvalidBase64() {
+        String arrayToken = "[\"invalid-base64!!!\"]";
+        List<JSONObject> jsonVpTokens = new ArrayList<>();
+        List<String> sdJwtVpTokens = new ArrayList<>();
+        verifiablePresentationSubmissionService.extractTokens(arrayToken, jsonVpTokens, sdJwtVpTokens);
+
+        assertTrue(jsonVpTokens.isEmpty());
+        assertTrue(sdJwtVpTokens.isEmpty());
     }
 }
